# billiards-trainer

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .pydocstyle  AGENTS.md  ARCHITECTURE.md  AUTH_INTEGRATION_ANALYSIS.md  BALL_DETECTION_FLOW_COMPARISON.md  CALIBRATION_IMPROVEMENTS_REPORT.md  CAMERA_STREAMING_ANALYSIS.md  CAMERA_STREAMING_RECOMMENDATION.md  CAMERA_STREAM_STATUS.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION_VALIDATION_IMPLEMENTATION.md  DETECTION_OVERLAY_INTEGRATION_REPORT.md  DOCKER.md  GETTING_STARTED.md  IMPLEMENTATION_REPORT.md  MIGRATION_CUE_POINTING.md  Makefile  PLAN.md  PROMPT - visualizer.md  PROMPT.md  PROMPT2.md  PROMPT3.md  README.md  SETUP_SUMMARY.md  STATE_CONVERSION_IMPROVEMENTS.md  SYSTEM_INTEGRATION_SUMMARY.md  TABLE_STATE_ANALYSIS.md  TEST_SUITE_SUMMARY.md  TRAJECTORY_RENDERING_SUMMARY.md  VIDEO_CONFIG_UPDATES.md  calibration_demo.py  config.dev.json  config.json  convert.py  debug_table_detection.py  (+22 more)
.claude/agents/: codebase-analyzer.md  project-planner.md
.claude/commands/: debug.md
.github/workflows/: docker-build-deploy.yml  test.yml
backend/: .dockerignore  BUILD_FAILURE_ANALYSIS.md  BUILD_FIXES_QUICK_REF.md  CAMERA_CALIBRATION_SUMMARY.md  COMPREHENSIVE_API_TEST_REPORT.md  Dockerfile  Dockerfile.dev  HEALTH_MONITORING.md  MODULE_INTEGRATION_TEST_REPORT.md  PERFORMANCE_INSTRUMENTATION.md  README.md  build_failures.json  config.json  config.py  dev_server.py  entrypoint.sh  fix_build_failures.sh  integration_service.py  integration_service_conversion_helpers.py  main.py  projector_example.py  requirements.txt  system_launcher.py  test_4k_functionality.py  test_api.py  test_api_endpoints.py  test_basic_models.py  test_calibration_storage.py  test_config_integration.py  test_coordinate_conversion_fix.py  test_core_integration.py  test_core_integration_simple.py  test_cross_module_integration.py  test_cross_module_simple.py  test_detection.py  test_detection_simple.py  test_direct_camera.py  test_error_handling.py  test_health_monitoring.py  test_integration.py  (+10 more)
backend/api/: AUTHENTICATION_SUMMARY.md  README.md  SPECS.md  database.py  demo_integration.py  dependencies.py  integration.py  main.py  shutdown.py
backend/calibration/: camera_fisheye_default.yaml
backend/calibration_cache/: camera_params.json
backend/calibration_data/: QUICKSTART.md
backend/config/: .encryption_key  FILE_WATCHER_FIX.md  HOT_RELOAD_IMPLEMENTATION.md  PERSISTENCE_IMPLEMENTATION.md  SPECS.md  VALIDATION_README.md  __init__.py  default.json  demo.py  demo_backup.py  demo_cli.py  demo_encryption.py  demo_hot_reload.py  demo_persistence.py  example_usage.py  integration_test.py  manager.py  production.json  simple_test.py  test_persistence.py  test_validation.py  validation.py  validation_demo.py
backend/core/: COORDINATE_CONVERTER_EXAMPLES.md  MODELS_COORDINATE_MIGRATION.md  RESOLUTION_CONFIG_README.md  RESOLUTION_CONFIG_SUMMARY.md  SPECS.md  __init__.py  constants_4k.py  coordinates.py  game_state.py  integration.py  models.py  resolution_config.py  resolution_config_examples.py  resolution_converter.py  rules.py  test_functional.py  test_integration.py  test_integration_complete.py  validation.py  verify_group1.py
config/: .encryption_key  current.json  default.json  local.json  logging.yaml  vision_background_example.json  vision_tpu_example.json  vision_yolo_example.json
dataset/: .gitignore  README.md  dataset.yaml
deployment/: backup.py  deploy.py  logrotate.conf
docs/: API_REFERENCE.md  CHANGELOG_VIDEO_CONFIG.md  CONFIG.md  COORDINATE_SYSTEMS.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_DEV.md  GPU_ACCELERATION_IMPLEMENTATION.md  HARDCODED_VALUES_ELIMINATION_SUMMARY.md  PROJECTOR_DEPLOYMENT.md  REFACTORING_SUMMARY.md  SYSTEM_INTEGRATION.md  docker-deployment.md
frontend/: SPECS.md
models/: .gitignore  MODEL_TEMPLATE.md  README.md
monitoring/: prometheus.yml
scripts/: deploy-example.sh  gst-opencv-fisheye.py  gstreamer-multistream.sh  inspect_yolo_model.py  setup-camera-streaming.sh  setup.sh  test_geometric_trajectory.py  test_hybrid_detection.py  test_setup.py  test_yolo_video.py
thoughts/: 00_BALL_DETECTION_EVENTS_INDEX.md  4k_coordinate_audit_consolidated.md  4k_migration_complete_summary.md  4k_migration_group1_summary.md  4k_migration_summary.md  4k_migration_test_results.md  4k_standardization_plan.md  ADDITIONAL_CLEANUP_OPPORTUNITIES.md  ARCHITECTURE_DIAGRAMS.md  BACKEND_ARCHITECTURE_ANALYSIS.md  CLEANUP_VERIFICATION_REPORT.md  CLEANUP_shared_memory_only.md  COMPLETE_4K_MIGRATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FRONTEND_COORDINATE_MIGRATION_INDEX.md  IMPLEMENTATION_streaming_endpoints_phase2_task4.md  IMPLEMENTATION_video_process.md  INVESTIGATION_SUMMARY.md  PLAN_phase2_shared_memory_ipc.md  PLAN_phase3_enhanced_detection.md  QUICKSTART_shared_memory_streaming.md  README.md  README_MESSAGE_PUBLISHING.md  TABLE_DETECTOR_REMOVAL_SUMMARY.md  VISION_LAG_ANALYSIS_INDEX.md  api_models_coordinate_fix.md  api_routes_coordinate_fix.md  ball-detection-speed-improvements.md  ball_detection_event_flow_report.md  ballstate-velocity-parameter-fix.md  calibration-based-table-dimensions-plan.md  calibration-enhancements.md  calibration_bug.md  comparison_configuration.md  comparison_video_streaming.md  concurrency_analysis.md  coordinate_conversion_fix_summary.md  coordinate_space_metadata_update.md  coordinate_space_tracking_implementation.md  critical-tracking-bug-fix.md  (+47 more)
tools/: BENCHMARK_QUICKSTART.md  BENCHMARK_SUMMARY.md  QUICKSTART_EQUIVALENCE_TEST.md  QUICK_START.md  README_BENCHMARK.md  README_DATASET_CREATOR.md  README_EQUIVALENCE_TEST.md  README_compare_detectors.md  annotation_validator.py  benchmark_detectors.py  check_model_classes.py  compare_detectors.py  dataset_creator.py  download_roboflow_datasets.py  example_ground_truth.json  example_opencv_config.json  example_yolo_config.json  export_high_res_model.py  fix_dataset_labels.py  run_equivalence_test.sh  setup_training.sh  simple_video_test.py  test_backend_equivalence.py  test_vision_debug.py  train_yolo.py  video_debugger.py
(+592 files in other folders)
